# emailextract

./: LICENCE  README  pyproject.toml  setup.cfg  setup.py
emailextract/: __init__.py  emailextract.py
emailextract/core/: __init__.py  emailextractor.py
emailextract/gui/: __init__.py  help.py  help_.py  select.py
emailextract/help/: __init__.py  about.txt  emailextract.txt  guide.txt
emailextract/help_/: __init__.py  emailextract.txt
