[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "emailextract"
version = "0.7.13.dev0"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Extract text from emails."
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = {file = "LICENCE"}
readme = "README"
dependencies = [
    "solentware-misc==1.7.1.dev0",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/emailextract.git"
"Bug Tracker" = "https://github.com/RogerMarsh/emailextract/issues"

[tool.setuptools]
packages = [
    "emailextract",
    "emailextract.core",
    "emailextract.gui",
    "emailextract.help_",
]

[tool.setuptools.package-data]
emailextract = ["help_/*.txt"]
