[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "emailextract"
version = "0.7.14"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Extract text from emails."
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = "BSD-3-Clause"
license-files = ["LICENCE"]
readme = "README"
dependencies = [
    "solentware-misc==1.7.2",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/emailextract.git"
"Bug Tracker" = "https://github.com/RogerMarsh/emailextract/issues"

[tool.setuptools]
packages = [
    "emailextract",
    "emailextract.core",
    "emailextract.gui",
    "emailextract.help_",
]

[tool.setuptools.package-data]
emailextract = ["help_/*.txt"]
