[metadata]
name = emailextract
version = 0.7.9
description = Extract text from emails
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Other/Nonlisted Topic
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    emailextract
    emailextract.core
    emailextract.gui
    emailextract.help_
install_requires =
    solentware-misc==1.5.1

[options.package_data]
emailextract.help = *.txt
